# starwars-gcp-explorer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci-cd.yml
backend/: .env.example  mypy.ini  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: characters.py  films.py  planets.py  starships.py
backend/src/application/ports/: swapi_client.py
backend/src/application/use_cases/: get_characters.py  get_films.py  get_planets.py  get_starships.py
backend/src/core/: config.py
backend/src/domain/entities/: character.py  film.py  planet.py  starship.py
backend/src/domain/value_objects/: filters.py
backend/src/infrastructure/: cache.py  swapi_http_client.py
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: test_api_routes.py  test_swapi_client.py
backend/tests/unit/: test_cache.py  test_entities.py  test_use_cases.py
docs/: DEPLOYMENT.md  api-examples.md  architecture.md  architecture.mmd  monitoring.md  security_audit.md
docs/monitoring/: high_cpu_usage.yaml  high_error_rate.yaml  high_memory_usage.yaml
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CharacterCard.tsx  FilmCard.tsx  Loader.tsx  PlanetCard.tsx  SearchBar.tsx  StarshipCard.tsx
scripts/: generate_api_key.py  setup_monitoring.sh
(+11 files in other folders)
